--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -3,7 +3,7 @@
 <html lang = "ru">
     <head>
         <title>
-            ПЕРСОНАЛЬНАЯ СТРАНИЦА Саске Учиха
+            ИЗМЕНЕНИЕ ДЛЯ ГИТА
         </title>
         <style type="text/css">
             body{
