--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,7 +10,7 @@
                 background-color: #c8a2c8;
             }
         </style>
-        <h1 allign="center">ПЕРСОНАЛЬНАЯ страничка Саске Учихи</h1>
+        <h1 allign="center">ИЗМЕНЕНИЕ ДЛЯ ГИТА</h1>
     </head>
     <body>
         <img src="sasuke.jpg">
