изменил строчку в бади

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -14,8 +14,7 @@
     </head>
     <body>
         <img src="sasuke.jpg">
-       <p>Меня зовут Учиха Саске. Есть много вещей, которые я не люблю, но нет ничего такого, что мне не нравится.<br>
-        Врядли это можно назвать мечтой, но я собираюсь возродить мой клан...</p>
+       <p>ИЗМЕНИЛ ДЛЯ ГИТА</p>
         <table>
             <tr>
                 <td><img src="kakashi.jpg" height = "250"></td> 
